add api login logout
